--- a/.github/workflows/input-vars.yml
+++ b/.github/workflows/input-vars.yml
@@ -13,12 +13,24 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
     inputs: 
+      mensagem: 
+        type: string
+        required: true
+      
+      cafe:
+        type: boolean
+        description: Vamos tomar café
+
+      ambiente: 
+        type: enviroment
+        
       nuvem: 
         type: choice
         description: Escolha a nuvem onde pretende trabalhar 
         options: 
           - aws
           - azure
+          - gcp
           - oracle
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
