--- a/.github/workflows/input-vars.yml
+++ b/.github/workflows/input-vars.yml
@@ -47,10 +47,11 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello, world!
+        run: echo ${{github.event.inputs.mensagem}}
+         
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          echo Add other actions to build,
+          echo ${{github.event.inputs.cafe}}
           echo test, and deploy your project.
