--- a/.github/workflows/input-vars.yml
+++ b/.github/workflows/input-vars.yml
@@ -35,6 +35,12 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  call-aws-workflow:
+    uses: ./.github/workflows/aws.yml
+    with:
+      msg: ${{github.event.inputs.mensagem}}
+    secrets: inherit  
+    
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
